# fractals

./: CMakeLists.txt
src/: main.c  shader.c  shader.h
src/shaders/: fragShader.glsl  vertShader.glsl
